New code organization finally running in one version

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -20,7 +20,7 @@ small_world=True
 data_name='50-types-mnist/multi-mnist3-0.2'
 segments=3
 exp_name='3_digit_mnist'
-model_name='simple_conv'
+model_name='Unet'
 disable_cuda=False
 interactive=False
 img_side = 36
