Cleaned things up

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -3,7 +3,7 @@ data_name='composite_textures_mini'
 segments=4
 exp_name='four_texture_segment'
 model_name='simple_conv'
-disable_cuda=False
+device='cuda'
 interactive=False
 img_side = 16
 batch_size=32
@@ -21,18 +21,22 @@ data_name='50-types-mnist/multi-mnist3-0.2'
 segments=3
 exp_name='3_digit_mnist'
 model_name='Unet'
-disable_cuda=False
+device='cuda'
 interactive=False
+show_every=50
 img_side = 36
-batch_size=32
+batch_size=8
 train_epochs=1000
 time_weight=2
 time_steps=8
-rand_init_phase=False
+record_steps=1
+anneal=0
+phase_initialization='random'
 update_rate=1.6
 learning_rate=.0001
 sparsity_weight=.00001
 small_world=True
+num_cn=8
 
 [SD]
 data_name = 'polyominoes'
