Added search experiment API

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -1,9 +1,9 @@
 [Texture]
-data_name='composite_textures_mini'
+data_name=composite_textures_mini
 segments=4
-exp_name='four_texture_segment'
-model_name='simple_conv'
-device='cuda'
+exp_name=four_texture_segment
+model_name=simple_conv
+device=cuda
 interactive=False
 img_side = 16
 batch_size=32
@@ -17,11 +17,11 @@ sparsity_weight=.00001
 small_world=True
 
 [Multi_MNIST]
-data_name='50-types-mnist/multi-mnist3-0.2'
+data_name=50-types-mnist/multi-mnist3-0.2
 segments=3
-exp_name='3_digit_mnist'
-model_name='Unet'
-device='cuda'
+exp_name=3_digit_mnist
+model_name=Unet
+device=cuda
 interactive=False
 show_every=50
 img_side = 36
@@ -31,7 +31,8 @@ time_weight=2
 time_steps=8
 record_steps=1
 anneal=0
-phase_initialization='random'
+phase_initialization=random
+intrinsic_frequencies=zero
 update_rate=1.6
 learning_rate=.0001
 sparsity_weight=.00001
@@ -39,13 +40,14 @@ small_world=True
 num_cn=8
 
 [SD]
-data_name = 'polyominoes'
+data_name = polyominoes
 img_side = 16
 poly_size = 4
 num_polys = 4
 
 [D_search]
-sub_experiment = 'Texture'
-search_parameter = 'time_weight'
+sub_experiment = Multi_MNIST
+search_parameter = time_weight
 search_values = [0,1,2,3,4,5]
+device_indices = [0,1,2,3,4,5] 
 
