--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -1,20 +1,25 @@
 [Texture]
-data_name=composite_textures_mini
+data_name=composite_textures_small
 segments=4
 exp_name=four_texture_segment
-model_name=simple_conv
+model_name=Unet
 device=cuda
 interactive=False
-img_side = 16
-batch_size=32
+show_every=50
+img_side = 32
+batch_size=8
 train_epochs=1000
 time_weight=2
 time_steps=8
-rand_init_phase=False
+record_steps=1
+anneal=0
+phase_initialization=random
+intrinsic_frequencies=zero
 update_rate=1.6
 learning_rate=.0001
 sparsity_weight=.00001
 small_world=True
+num_cn=8
 
 [Multi_MNIST]
 data_name=50-types-mnist/multi-mnist3-0.2
@@ -45,9 +50,14 @@ img_side = 16
 poly_size = 4
 num_polys = 4
 
-[D_search]
+[time_weight_search]
 sub_experiment = Multi_MNIST
 search_parameter = time_weight
 search_values = [0,1,2,3,4,5]
 device_indices = [0,1,2,3,4,5] 
 
+[phase_init_search]
+sub_experiment = Multi_MNIST
+search_parameter = phase_initialization
+search_values = [random,gaussian,categorical,fixed]
+device_indices = [0,1,2,3] 
