add argument transform in loss

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -20,6 +20,7 @@ learning_rate=.0001
 sparsity_weight=.00001
 small_world=True
 num_cn=8
+transform='exp'
 
 [Multi_MNIST]
 data_name=50-types-mnist/multi-mnist3-0.2
@@ -43,6 +44,7 @@ learning_rate=.0001
 sparsity_weight=.00001
 small_world=True
 num_cn=8
+transform='exp'
 
 [SD]
 data_name = polyominoes
