Change to working parameters

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -1,29 +1,29 @@
 [Texture]
-data_name=composite_textures_small
+data_name=composite_textures
 segments=4
 exp_name=four_texture_segment
-model_name=Unet
+model_name=simple_conv
 device=cuda
 interactive=False
-show_every=50
-img_side = 32
-batch_size=8
-train_epochs=1000
+show_every=10
+img_side = 64
+batch_size=24
+train_epochs=100
 time_weight=2
-time_steps=8
-record_steps=1
-anneal=0
-phase_initialization=random
+time_steps=15
+record_steps=5
+anneal=0.2
+phase_initialization=fixed
 intrinsic_frequencies=zero
-update_rate=1.6
+update_rate=10
 learning_rate=.0001
-sparsity_weight=.00001
+sparsity_weight=0.0001
 small_world=True
-num_cn=8
+num_cn=68
 transform='exp'
 
 [Multi_MNIST]
-data_name=50-types-mnist/multi-mnist3-0.2
+data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
 segments=3
 exp_name=3_digit_mnist
 model_name=Unet
@@ -31,19 +31,19 @@ device=cuda
 interactive=False
 show_every=50
 img_side = 36
-batch_size=8
-train_epochs=1000
+batch_size=100
+train_epochs=100
 time_weight=2
-time_steps=8
-record_steps=1
-anneal=0
-phase_initialization=random
+time_steps=15
+record_steps=5
+anneal=0.2
+phase_initialization=fixed
 intrinsic_frequencies=zero
-update_rate=1.6
+update_rate=10
 learning_rate=.0001
-sparsity_weight=.00001
+sparsity_weight=.0001
 small_world=True
-num_cn=8
+num_cn=45
 transform='exp'
 
 [SD]
