Fixed config bugs and added loss experiment

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -25,7 +25,7 @@ start_filts=64
 depth=3
 out_channels=256
 split=64
-kernel_size=(3, 9)
+kernel_size=3,9
 
 [Multi_MNIST36]
 data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
@@ -73,3 +73,9 @@ sub_experiment = Multi_MNIST
 search_parameter = phase_initialization
 search_values = [random,gaussian,categorical,fixed]
 device_indices = [0,1,2,3]
+
+[loss_search]
+sub_experiment = Texture64
+search_parameter = transform
+search_values = ['exp', 'linear']
+device_indices = [0,1]
