Net debug and random walk initial phase

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -14,6 +14,7 @@ time_steps=15
 record_steps=5
 anneal=0.2
 phase_initialization=fixed
+walk_step=.1
 intrinsic_frequencies=zero
 update_rate=10
 learning_rate=.0001
@@ -69,13 +70,19 @@ search_values = [0,1,2,3,4,5]
 device_indices = [0,1,2,3,4,5]
 
 [phase_init_search]
-sub_experiment = Multi_MNIST
+sub_experiment = Texture64
 search_parameter = phase_initialization
-search_values = [random,gaussian,categorical,fixed]
-device_indices = [0,1,2,3]
+search_values = ['random','random_walk','gaussian','categorical','fixed']
+device_indices = [2,3,4,5]
 
 [loss_search]
 sub_experiment = Texture64
 search_parameter = transform
 search_values = ['exp', 'linear']
 device_indices = [0,1]
+
+[walk_search]
+sub_experiment = Texture64
+search_parameter = walk_step
+search_values = [.05,.1,.15,.2,.25,.3,.35,.4]
+device_indices = [0,1,2,3,4,5,6,7]
