--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -64,16 +64,16 @@ poly_size = 4
 num_polys = 4
 
 [time_weight_search]
-sub_experiment = Multi_MNIST
+sub_experiment = Texture64
 search_parameter = time_weight
-search_values = [0,1,2,3,4,5]
+search_values = [0.0,.5,1.0,1.5,2.0,2.5]
 device_indices = [0,1,2,3,4,5]
 
 [phase_init_search]
 sub_experiment = Texture64
 search_parameter = phase_initialization
 search_values = ['random','random_walk','gaussian','categorical','fixed']
-device_indices = [2,3,4,5]
+device_indices = [2,3,4,5,6]
 
 [loss_search]
 sub_experiment = Texture64
