Turn texture small_world down

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -19,7 +19,7 @@ intrinsic_frequencies=zero
 update_rate=10
 learning_rate=.0001
 sparsity_weight=0.0001
-small_world=True
+small_world=False
 num_cn=8
 transform='exp'
 start_filts=64
