--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -1,26 +1,27 @@
-[Texture64]
-data_name=composite_textures
-segments=4
-exp_name=four_texture_segment
+[Texture32]
+data_name=composite_textures_small
+segments=3
+exp_name=three_texture_segment
 model_name=simple_conv
 device=cuda
 interactive=False
-show_every=10
-img_side = 64
-batch_size=24
+show_every=100
+img_side = 32
+batch_size=32
 train_epochs=100
 time_weight=2
-time_steps=15
-record_steps=5
-anneal=0.2
+time_steps=8
+record_steps=1
+anneal=0.0
 phase_initialization=fixed
 walk_step=.1
 intrinsic_frequencies=zero
-update_rate=10
+update_rate=18
 learning_rate=.0001
 sparsity_weight=0.0001
-small_world=False
-num_cn=8
+small_world=True
+num_cn=24
+critical_dist=3
 transform='exp'
 start_filts=64
 depth=3
