Partial hierarchcy merge

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -19,9 +19,11 @@ intrinsic_frequencies=zero
 update_rate=18
 learning_rate=.0001
 sparsity_weight=0.0001
-small_world=True
+sw=False
 num_cn=24
-critical_dist=3
+num_global_control=4
+p_rewire=0.0
+rp_field=arange
 transform='exp'
 start_filts=64
 depth=3
