--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -34,31 +34,32 @@ kernel_size=3,9
 [Multi_MNIST36]
 data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
 segments=3
-exp_name=3_digit_mnist
+exp_name=2_digit_mnist
 model_name=Unet
-device=cuda
+device=cpu
 interactive=False
-show_every=50
+show_every=100
 img_side = 36
-batch_size=100
+num_global_control=4
+batch_size=32
 train_epochs=100
 time_weight=2
 time_steps=15
-record_steps=5
+record_steps=1
 anneal=0.2
 phase_initialization=fixed
 intrinsic_frequencies=zero
 update_rate=10
 learning_rate=.0001
 sparsity_weight=.0001
-small_world=True
-num_cn=45
+sw=False
+num_cn=8
 transform='exp'
-start_filts=128
+start_filts=64
 depth=3
-out_channels=288
-split=144
-kernel_size=3
+out_channels=65
+split=16
+kernel_size=3,3
 
 [SD]
 data_name = polyominoes
