Even more debugging

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -36,11 +36,11 @@ data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
 segments=3
 exp_name=2_digit_mnist
 model_name=Unet
-device=cpu
+device=cuda
 interactive=False
 show_every=100
 img_side = 36
-num_global_control=4
+num_global_control=0
 batch_size=32
 train_epochs=100
 time_weight=2
@@ -60,6 +60,7 @@ depth=3
 out_channels=65
 split=16
 kernel_size=3,3
+rp_field=arange
 
 [SD]
 data_name = polyominoes
