--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -1,72 +1,74 @@
+[DEFAULT]
+data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
+exp_name=2_digit_mnist
+device=cuda
+interactive=False
+model=Unet
+segments=3
+img_side=36
+num_global_control=4
+num_cn=8
+sw=False
+p_rewire=0
+batch_size=1
+train_epochs=100
+show_every=100
+update_rate=10
+rf_type=arange
+depth=3
+start_filts=64
+split=16
+out_channels=64
+kernel_size=3,3
+time_steps=15
+record_step=1
+anneal=0.2
+phase_initialization=fixed
+walk_step=.1
+intrinsic_frequencies=zero
+learning_rate=1e-4
+transform=exp
+sparsity_weight=0
+time_weight=2
+
+[Multi_MNIST36]
+
 [Texture32]
 data_name=composite_textures_small
 segments=3
 exp_name=three_texture_segment
 model_name=simple_conv
-device=cuda
-interactive=False
-show_every=100
 img_side = 32
-batch_size=1
-train_epochs=100
-time_weight=2
-time_steps=15
 record_steps=15
 anneal=0.0
-phase_initialization=fixed
-walk_step=.1
-intrinsic_frequencies=zero
 update_rate=18
-learning_rate=.0001
 sparsity_weight=0.0001
-sw=False
 num_cn=24
-num_global_control=4
-p_rewire=0.0
-rp_field=arange
-transform='exp'
-start_filts=64
-depth=3
+num_global_control=0
 out_channels=256
 split=64
 kernel_size=3,9
 
-[Multi_MNIST36]
-data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
-segments=3
-exp_name=2_digit_mnist
-model_name=Unet
-device=cuda
-interactive=False
-show_every=100
-img_side = 36
-num_global_control=4
-batch_size=1
-train_epochs=100
-time_weight=2
-time_steps=15
-record_steps=1
-anneal=0.2
-phase_initialization=fixed
-intrinsic_frequencies=learned
-update_rate=10
-learning_rate=.0001
-sparsity_weight=.0001
-sw=False
-num_cn=8
-transform='exp'
-start_filts=64
-depth=3
+[local]
+num_global_control=0
+batch_size=160
 out_channels=64
-split=16
-kernel_size=3,3
-rp_field=arange
 
-[SD]
-data_name = polyominoes
-img_side = 16
-poly_size = 4
-num_polys = 4
+[small_world]
+num_global_control=0
+num_cn=10
+sw=True
+p_rewire=.5
+out_channels=64
+
+[random_field]
+rf_type=random
+
+[more_neighbors]
+num_cn=24
+
+[more_global]
+num_global_control=9
 
 [time_weight_search]
 sub_experiment = Texture64
@@ -75,7 +77,7 @@ search_values = [0.0,.5,1.0,1.5,2.0,2.5]
 device_indices = [0,1,2,3,4,5]
 
 [phase_init_search]
-sub_experiment = Texture64
+sub_experiment = Texture32
 search_parameter = phase_initialization
 search_values = ['random','random_walk','gaussian','categorical','fixed']
 device_indices = [2,3,4,5,6]
