--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -10,7 +10,7 @@ num_global_control=4
 num_cn=8
 sw=False
 p_rewire=0
-batch_size=64
+batch_size=96
 train_epochs=100
 show_every=100
 update_rate=10
@@ -39,12 +39,15 @@ segments=3
 exp_name=three_texture_segment
 model_name=simple_conv
 img_side = 32
-record_steps=15
+time_steps=8
+record_steps=1
 anneal=0.0
 update_rate=18
 sparsity_weight=0.0001
+sw=True
+p_rewire=.5
 num_cn=24
-num_global_control=4
+num_global_control=0
 out_channels=256
 split=64
 kernel_size=3,9
