--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -33,6 +33,13 @@ time_weight=2
 
 [Multi_MNIST36]
 
+[Multi_MNIST36stats]
+exp_name = MultiMnistStats
+one_image = True
+path_length = True
+cluster = True
+laplacian = True
+
 [Texture32]
 data_name=composite_textures_small
 segments=3
