--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -30,8 +30,13 @@ learning_rate=1e-4
 transform=exp
 sparsity_weight=0
 time_weight=2
+classify=False
+graph_stats=False
 
 [Multi_MNIST36]
+
+[Classify_MNIST]
+classify=True
 
 [Multi_MNIST36stats]
 exp_name = MultiMnistStats
