--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -43,7 +43,7 @@ exp_name = MultiMnistStats
 one_image = True
 path_length = True
 cluster = True
-laplacian = True
+#laplacian = True
 
 [Texture32]
 data_name=composite_textures_small
