--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -43,12 +43,36 @@ exp_name = MultiMnistStats
 one_image = True
 path_length = True
 cluster = True
-#laplacian = True
+laplacian = True
 
 [Texture32]
 data_name=composite_textures_small
 segments=3
 exp_name=three_texture_segment
+model_name=simple_conv
+img_side = 32
+time_steps=8
+record_steps=1
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=learned
+sw=True
+p_rewire=.5
+num_cn=24
+num_global_control=0
+out_channels=256
+split=64
+kernel_size=3,9
+
+[Texture32stats]
+data_name=composite_textures_small
+segments=3
+exp_name=Texturestats
+one_image = True
+path_length = True
+cluster = True
+laplacian = True
 model_name=simple_conv
 img_side = 32
 time_steps=8
