stats work for texture,largest gap

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -34,6 +34,8 @@ classify=False
 graph_stats=False
 
 [Multi_MNIST36]
+exp_name = trial
+one_image = True
 
 [Classify_MNIST]
 classify=True
@@ -41,7 +43,7 @@ classify=True
 [Multi_MNIST36stats]
 exp_name = MultiMnistStats
 one_image = True
-path_length = True
+#path_length = True
 cluster = True
 laplacian = True
 
