--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -39,8 +39,9 @@ exp_name = trial
 one_image = True
 
 [Classify_MNIST]
+record_step=8
 classify=True
-recurrent_classifier=False
+recurrent_classifier=True
 
 [Multi_MNIST36stats]
 exp_name = MultiMnistStats
