--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -73,9 +73,24 @@ kernel_size=3,9
 [Texture64]
 data_name=composite_textures
 segments=3
-exp_name=three_texture_segment
+exp_name=texture_segment_64
 model_name=simple_conv
+train_epochs=1000
 img_side = 64
+batch_size=12
+time_steps=8
+record_steps=1
+anneal=0.0
+show_every=-1
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=True
+num_cn=24
+num_global_control=0
+out_channels=256
+split=64
+kernel_size=3,9
 
 [Texture32stats]
 data_name=composite_textures_small
@@ -144,4 +159,10 @@ device_indices = [0,1]
 sub_experiment = Texture64
 search_parameter = walk_step
 search_values = [.05,.1,.15,.2,.25,.3,.35,.4]
+device_indices = [0,1,2,3,4,5,6,7]
+
+[segment_search]
+sub_experiment = Texture64
+search_parameter = segments
+search_values = [2,3,4,5,6,7,8,9]
 device_indices = [0,1,2,3,4,5,6,7]
