add base_conv and base_noKura_conv

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -49,11 +49,33 @@ one_image = True
 cluster = True
 laplacian = True
 
-[Texture32]
+[Texture32CNN]
 data_name=composite_textures_small
 segments=3
-exp_name=three_texture_segment
-model_name=simple_conv
+exp_name=minju_baseCNN_tanh_split32_three_texture_segment
+model_name=base_noKura_conv
+img_side = 32
+time_steps=1
+record_steps=1
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=True
+p_rewire=.5
+num_cn=24
+num_global_control=0
+depth=3
+#out_channels=128
+split=32
+kernel_size=5
+rf_type='none'
+
+[Texture32Kura]
+data_name=composite_textures_small
+segments=3
+exp_name=minju_Kura_tanh_split32_three_texture_segment
+model_name=base_conv
 img_side = 32
 time_steps=8
 record_steps=1
@@ -65,9 +87,10 @@ sw=True
 p_rewire=.5
 num_cn=24
 num_global_control=0
-out_channels=256
-split=64
-kernel_size=3,9
+depth=3
+#out_channels=128
+split=32
+kernel_size=5
 
 [Texture64]
 data_name=composite_textures
@@ -75,6 +98,7 @@ segments=3
 exp_name=three_texture_segment
 model_name=simple_conv
 img_side = 64
+
 
 [Texture32stats]
 data_name=composite_textures_small
