save multiple images

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -45,10 +45,7 @@ recurrent_classifier=True
 
 [Multi_MNIST36stats]
 exp_name = MultiMnistStats
-one_image = True
-#path_length = True
-cluster = True
-laplacian = True
+multi_image = True
 
 [Texture32CNN]
 data_name=composite_textures_small
@@ -120,10 +117,7 @@ kernel_size=3,9
 data_name=composite_textures_small
 segments=3
 exp_name=Texturestats
-one_image = True
-path_length = True
-cluster = True
-laplacian = True
+multi_image = True
 model_name=simple_conv
 img_side = 32
 time_steps=8
@@ -131,7 +125,7 @@ record_steps=1
 anneal=0.0
 update_rate=18
 sparsity_weight=0.0001
-intrinsic_frequencies=learned
+intrinsic_frequencies=zero
 sw=True
 p_rewire=.5
 num_cn=24
