--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -50,10 +50,11 @@ one_image = True
 cluster = True
 laplacian = True
 
-[Texture32CNN]
+
+[TextureFive32CNN_lr1e-4_start_filts8]
 data_name=composite_textures_small
-segments=3
-exp_name=minju_baseCNN_tanh_split32_three_texture_segment
+segments=5
+exp_name=minju_baseCNN_start_filts8_lr1e-4_tanh_split1_five_texture_segment
 model_name=base_noKura_conv
 img_side = 32
 time_steps=1
@@ -66,16 +67,72 @@ sw=True
 p_rewire=.5
 num_cn=24
 num_global_control=0
+start_filts=8
 depth=3
 #out_channels=128
-split=32
+split=1
+kernel_size=5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+rf_type='none'
+
+
+[TextureThree32CNN_lr1e-4_start_filts8]
+data_name=composite_textures_small
+segments=3
+exp_name=minju_baseCNN_start_filts8_lr1e-4_tanh_split1_three_texture_segment
+model_name=base_noKura_conv
+img_side = 32
+time_steps=1
+record_steps=1
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=True
+p_rewire=.5
+num_cn=24
+num_global_control=0
+start_filts=8
+depth=3
+#out_channels=128
+split=1
+kernel_size=5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+rf_type='none'
+
+
+[Texture32CNN]
+data_name=composite_textures_small
+segments=3
+exp_name=minju_baseCNN_start_filts16_tanh_split1_three_texture_segment
+model_name=base_noKura_conv
+img_side = 32
+time_steps=1
+record_steps=1
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=True
+p_rewire=.5
+num_cn=24
+num_global_control=0
+start_filts=16
+depth=3
+#out_channels=128
+split=1
 kernel_size=5
 rf_type='none'
 
-[Texture32Kura]
+
+[TextureFive32Kura_num_cn16_lr1e-4_start_filts8]
 data_name=composite_textures_small
-segments=3
-exp_name=minju_Kura_tanh_split32_three_texture_segment
+segments=5
+exp_name=minju_Kura_numCn16_lr1e-4_evalInterval10_start_filts8_tanh_split4_five_texture_segment
 model_name=base_conv
 img_side = 32
 time_steps=8
@@ -86,12 +143,44 @@ sparsity_weight=0.0001
 intrinsic_frequencies=zero
 sw=True
 p_rewire=.5
-num_cn=24
+num_cn=16
 num_global_control=0
 depth=3
 #out_channels=128
-split=32
+start_filts=8
+split=4
 kernel_size=5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+
+
+
+[TextureThree32Kura_num_cn16_lr1e-4_start_filts8]
+data_name=composite_textures_small
+segments=3
+exp_name=minju_Kura_numCn16_lr1e-4_evalInterval10_start_filts8_tanh_split4_three_texture_segment
+model_name=base_conv
+img_side = 32
+time_steps=8
+record_steps=1
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=True
+p_rewire=.5
+num_cn=16
+num_global_control=0
+depth=3
+#out_channels=128
+start_filts=8
+split=4
+kernel_size=5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+
 
 [Texture64]
 data_name=composite_textures
