--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -47,6 +47,41 @@ recurrent_classifier=True
 exp_name = MultiMnistStats
 multi_image = True
 
+[Multi_MNIST_Kura]
+segments=3
+exp_name=Multi_MNIST_Kura
+model_name=base_conv
+img_side = 36
+anneal=0.0
+sw=True
+rf_type=none
+p_rewire=.5
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=8
+split=4
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+
+[Multi_MNIST_BL]
+segments=3
+exp_name=Multi_MNIST_BL
+model_name=base_noKura_conv
+img_side = 36
+anneal=0.0
+sw=True
+rf_type=none
+p_rewire=.5
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=8
+split=4
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
 
 [TextureFive32CNN_lr1e-4_start_filts8]
 data_name=composite_textures_small
