SD_SR minor changes

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -34,6 +34,43 @@ classify=False
 recurrent_classifier=False
 graph_stats=False
 
+
+[SAME_DIFF]
+data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
+exp_name=2_digit_mnist
+device=cuda
+interactive=False
+model=Unet
+segments=3
+img_side=36
+num_global_control=0
+num_cn=8
+sw=False
+p_rewire=0  # to be rewired for non-local connectivity
+batch_size=64   #depending on ressources
+train_epochs=200
+show_every=100
+update_rate=10
+rf_type=arange
+depth=3
+start_filts=64
+split=16
+out_channels=64
+kernel_size=3,3
+time_steps=15     # Enough to approximate convergence behavior of the system?
+record_step=1     # number of steps to be taken into account for the read-out
+anneal=0.2
+phase_initialization=fixed
+walk_step=.1
+intrinsic_frequencies=zero
+learning_rate=1e-4
+transform=exp
+sparsity_weight=0   #enforcing sparsity, potentialy try to remove it
+time_weight=2
+classify=False
+recurrent_classifier=False
+graph_stats=False
+
 [Multi_MNIST36]
 exp_name = trial
 one_image = True
@@ -54,7 +91,7 @@ segments=5
 exp_name=baseCNN_lr1e-4_evalInterval10_start_filts8_tanh_split1_five_texture_segment
 model_name=base_noKura_conv
 img_side = 32
-time_steps=1
+time_steps=8
 record_steps=1
 anneal=0.0
 update_rate=18
