--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -36,40 +36,43 @@ graph_stats=False
 
 
 [SAME_DIFF]
-data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
-exp_name=2_digit_mnist
+data_name=polyominoes_small/8/2/free/small
+exp_name=SR_polyominoes_
 device=cuda
-interactive=False
-model=Unet
+interactive=True
+model=base_conv
 segments=3
-img_side=36
+img_side=40
 num_global_control=0
 num_cn=8
-sw=False
-p_rewire=0  # to be rewired for non-local connectivity
-batch_size=64   #depending on ressources
-train_epochs=200
+sw=True
+p_rewire=0.1
+batch_size=16
+train_epochs=150
 show_every=100
-update_rate=10
+update_rate=1
 rf_type=arange
 depth=3
 start_filts=64
 split=16
 out_channels=64
 kernel_size=3,3
-time_steps=15     # Enough to approximate convergence behavior of the system?
-record_step=1     # number of steps to be taken into account for the read-out
-anneal=0.2
+time_steps=50
+record_step=5
+anneal=0
 phase_initialization=fixed
-walk_step=.1
+walk_step=.01
 intrinsic_frequencies=zero
 learning_rate=1e-4
 transform=exp
-sparsity_weight=0   #enforcing sparsity, potentialy try to remove it
+sparsity_weight=0
 time_weight=2
-classify=False
+classify=True
 recurrent_classifier=False
 graph_stats=False
+segmentation=False
+eval_interval=10
+pretrained=False
 
 [Multi_MNIST36]
 exp_name = trial
