Fixed test data loading and euler

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -28,7 +28,7 @@ walk_step=.1
 intrinsic_frequencies=zero
 learning_rate=1e-4
 transform=exp
-sparsity_weight=0
+sparsity_weight=.0001
 time_weight=2
 classify=False
 recurrent_classifier=False
@@ -51,7 +51,7 @@ multi_image = True
 [TextureFive32CNN_lr1e-4_start_filts8]
 data_name=composite_textures_small
 segments=5
-exp_name=baseCNN_lr1e-4_evalInterval10_start_filts8_tanh_split1_five_texture_segment
+exp_name=CORRECTVALbaseCNN_lr1e-4_evalInterval10_start_filts8_tanh_split1_five_texture_segment
 model_name=base_noKura_conv
 img_side = 32
 time_steps=1
@@ -75,10 +75,10 @@ train_epochs=1000
 rf_type='none'
 
 
-[TextureThree32CNN_lr1e-4_start_filts8]
+[A3]
 data_name=composite_textures_small
 segments=3
-exp_name=baseCNN_lr1e-4_evalInterval10_start_filts8_tanh_split1_three_texture_segment
+exp_name=A3
 model_name=base_noKura_conv
 img_side = 32
 time_steps=1
@@ -91,7 +91,7 @@ sw=True
 p_rewire=.5
 num_cn=24
 num_global_control=0
-start_filts=8
+start_filts=64
 depth=3
 #out_channels=128
 split=1
@@ -102,35 +102,11 @@ train_epochs=1000
 rf_type='none'
 
 
-[Texture32CNN]
-data_name=composite_textures_small
-segments=3
-exp_name=baseCNN_three_texture_segment
-model_name=base_noKura_conv
-img_side = 32
-time_steps=1
-record_steps=1
-anneal=0.0
-update_rate=18
-sparsity_weight=0.0001
-intrinsic_frequencies=zero
-sw=True
-p_rewire=.5
-num_cn=24
-num_global_control=0
-start_filts=16
-depth=3
-#out_channels=128
-split=1
-kernel_size=5
-rf_type='none'
-
-
-[TextureFive32Kura_num_cn16_lr1e-4_start_filts8]
+[Kura_5Texture_simple]
 data_name=composite_textures_small
 segments=5
-exp_name=Kura_numCn16_lr1e-4_evalInterval10_start_filts8_tanh_split4_five_texture_segment
-model_name=base_conv
+exp_name=Kura_5Texture_simple
+model_name=simple_conv
 img_side = 32
 time_steps=8
 record_steps=1
@@ -140,23 +116,74 @@ sparsity_weight=0.0001
 intrinsic_frequencies=zero
 sw=True
 p_rewire=.5
-num_cn=16
+num_cn=24
 num_global_control=0
 depth=3
-#out_channels=128
-start_filts=8
-split=4
-kernel_size=5
+out_channels=256
+start_filts=64
+split=64
+kernel_size=3,9
 learning_rate=1e-4
 eval_interval=10
 train_epochs=1000
 
-
-
-[TextureThree32Kura_num_cn16_lr1e-4_start_filts8]
+[Kura_3Texture_simple]
 data_name=composite_textures_small
 segments=3
-exp_name=Kura_numCn16_lr1e-4_evalInterval10_start_filts8_tanh_split4_three_texture_segment
+exp_name=Kura_3Texture_simple
+model_name=simple_conv
+img_side = 32
+time_steps=8
+record_steps=1
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=True
+p_rewire=.5
+num_cn=24
+num_global_control=0
+depth=3
+out_channels=256
+start_filts=64
+split=64
+kernel_size=3,9
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+
+[MNIST_BL]
+data_name=New_Multi_MNIST
+segments=3
+exp_name=MNIST_2_BL
+model_name=base_noKura_conv
+time_steps=1
+record_steps=1
+start_filts=8
+depth=3
+#out_channels=128
+split=1
+kernel_size=5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+rf_type='none'
+
+[MNIST_Kura]
+data_name=NEW_Multi_MNIST
+segments=3
+exp_name=MNIST_2_KURA
+model_name=base_conv
+img_side = 36
+split=4
+kernel_size=5
+eval_interval=10
+train_epochs=1000
+
+[A2]
+data_name=composite_textures_small
+segments=3
+exp_name=A2
 model_name=base_conv
 img_side = 32
 time_steps=8
@@ -177,7 +204,7 @@ kernel_size=5
 learning_rate=1e-4
 eval_interval=10
 train_epochs=1000
-
+time_weight=0
 
 [Texture64]
 data_name=composite_textures
@@ -273,3 +300,469 @@ sub_experiment = Texture64
 search_parameter = segments
 search_values = [2,3,4,5,6,7,8,9]
 device_indices = [0,1,2,3,4,5,6,7]
+
+#Vanilla
+
+[E1]
+data_name=composite_textures_small
+segments=3
+exp_name=E1
+model_name=base_conv
+img_side = 32
+time_steps=15
+record_steps=1
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=.0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=8
+split=4
+kernel_size=5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=2
+
+[E2]
+data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
+segments=3
+exp_name=E2
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=1
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=8
+split=4
+kernel_size=5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=2
+
+[E3]
+data_name=composite_textures_small
+segments=3
+exp_name=E3
+model_name=simple_conv
+img_side = 32
+time_steps=15
+record_steps=1
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=.0
+num_cn=24
+num_global_control=0
+depth=3
+out_channels=256
+start_filts=64
+split=64
+kernel_size=3,9
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=2
+
+[E4]
+data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
+segments=3
+exp_name=E4
+model_name=simple_conv
+img_side = 36
+time_steps=15
+record_steps=1
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+out_channels=256
+start_filts=64
+split=64
+kernel_size=3,9
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=2
+
+## Time weight = 1
+
+[E5]
+data_name=composite_textures_small
+segments=3
+exp_name=E5
+model_name=base_conv
+img_side = 32
+time_steps=15
+record_steps=1
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=.0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=8
+split=4
+kernel_size=5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=1
+
+[E6]
+data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
+segments=3
+exp_name=E6
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=1
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=8
+split=4
+kernel_size=5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=1
+
+[E7]
+data_name=composite_textures_small
+segments=3
+exp_name=E7
+model_name=simple_conv
+img_side = 32
+time_steps=15
+record_steps=1
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=.0
+num_cn=24
+num_global_control=0
+depth=3
+out_channels=256
+start_filts=64
+split=64
+kernel_size=3,9
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=1
+
+[E8]
+data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
+segments=3
+exp_name=E8
+model_name=simple_conv
+img_side = 36
+time_steps=15
+record_steps=1
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+out_channels=256
+start_filts=64
+split=64
+kernel_size=3,9
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=1
+
+## Record steps = 15
+
+[E9]
+data_name=composite_textures_small
+segments=3
+exp_name=E9
+model_name=base_conv
+img_side = 32
+time_steps=15
+record_steps=15
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=.0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=8
+split=4
+kernel_size=5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=2
+
+[E10]
+data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
+segments=3
+exp_name=E10
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=15
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=8
+split=4
+kernel_size=5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=2
+
+[E11]
+data_name=composite_textures_small
+segments=3
+exp_name=E11
+model_name=simple_conv
+img_side = 32
+time_steps=15
+record_steps=15
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=.0
+num_cn=24
+num_global_control=0
+depth=3
+out_channels=256
+start_filts=64
+split=64
+kernel_size=3,9
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=2
+
+[E12]
+data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
+segments=3
+exp_name=E12
+model_name=simple_conv
+img_side = 36
+time_steps=15
+record_steps=15
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+out_channels=256
+start_filts=64
+split=64
+kernel_size=3,9
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=2
+
+[E13]
+data_name=composite_textures_small
+segments=3
+exp_name=E13
+model_name=base_conv
+img_side = 32
+time_steps=15
+record_steps=15
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=.0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=8
+split=4
+kernel_size=5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=1
+
+[E14]
+data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
+segments=3
+exp_name=E14
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=15
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=8
+split=4
+kernel_size=5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=1
+
+[E15]
+data_name=composite_textures_small
+segments=3
+exp_name=E7
+model_name=simple_conv
+img_side = 32
+time_steps=15
+record_steps=15
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=.0
+num_cn=24
+num_global_control=0
+depth=3
+out_channels=256
+start_filts=64
+split=64
+kernel_size=3,9
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=1
+
+[E16]
+data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
+segments=3
+exp_name=E8
+model_name=simple_conv
+img_side = 36
+time_steps=15
+record_steps=15
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+out_channels=256
+start_filts=64
+split=64
+kernel_size=3,9
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=1
+
+## Timesteps = 45
+
+[E17]
+data_name=composite_textures_small
+segments=3
+exp_name=E17
+model_name=base_conv
+img_side = 32
+time_steps=45
+record_steps=1
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=.0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=8
+split=4
+kernel_size=5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=2
+
+[E18]
+data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
+segments=3
+exp_name=E18
+model_name=base_conv
+img_side = 36
+time_steps=45
+record_steps=1
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=8
+split=4
+kernel_size=5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=2
