Entropy_reg/complex_linear_readout

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -33,11 +33,11 @@ time_weight=2
 classify=False
 recurrent_classifier=False
 graph_stats=False
-
+entropy_reg=True
 
 [SAME_DIFF]
 data_name=polyominoes_small/8/2/free/small
-exp_name=SR_polyominoes_
+exp_name=SR_polyominoes_debug
 device=cuda
 interactive=True
 model=base_conv
@@ -47,7 +47,7 @@ num_global_control=0
 num_cn=8
 sw=True
 p_rewire=0.1
-batch_size=16
+batch_size=32
 train_epochs=150
 show_every=100
 update_rate=1
@@ -57,7 +57,7 @@ start_filts=64
 split=16
 out_channels=64
 kernel_size=3,3
-time_steps=50
+time_steps=20
 record_step=5
 anneal=0
 phase_initialization=fixed
@@ -67,12 +67,16 @@ learning_rate=1e-4
 transform=exp
 sparsity_weight=0
 time_weight=2
-classify=True
+task='classify'
 recurrent_classifier=False
 graph_stats=False
-segmentation=False
 eval_interval=10
 pretrained=False
+entropy_reg=True
+entropy_lambda=1e-5
+coherence_order=True
+read_out_type='linear'
+
 
 [Multi_MNIST36]
 exp_name = trial
