Removed normalization, except by sequence length. Other changes. Ask me!

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -1,42 +1,42 @@
 [DEFAULT]
-data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
+data_name=composite_textures_small
 exp_name=2_digit_mnist
 device=cuda
 interactive=False
-model=Unet
+model=base_conv
 segments=3
-img_side=36
-num_global_control=4
-num_cn=8
+img_side=32
+num_global_control=0
+num_cn=24
 sw=False
 p_rewire=0
-batch_size=64
-train_epochs=200
+batch_size=32
+train_epochs=1000
 show_every=100
-update_rate=10
+update_rate=18
 rf_type=arange
 depth=3
 start_filts=64
-split=16
+split=64
 out_channels=64
-kernel_size=3,3
+kernel_size=5
+activation=tanh
+dropout_p=.5
 time_steps=15
 record_step=1
-anneal=0.2
+anneal=0.0
 phase_initialization=fixed
 walk_step=.1
 intrinsic_frequencies=zero
 learning_rate=1e-4
-transform=exp
+transform=linear
 sparsity_weight=.0001
-time_weight=2
+time_weight=0
 classify=False
 recurrent_classifier=False
 graph_stats=False
-
-[Multi_MNIST36]
-exp_name = trial
-one_image = True
+verbosity=1
+eval_interval=10
 
 [Classify_MNIST]
 record_step=8
@@ -766,3 +766,335 @@ learning_rate=1e-4
 eval_interval=10
 train_epochs=1000
 time_weight=2
+
+[E19]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E19
+model_name=base_noKura_conv
+img_side = 36
+time_steps=1
+record_steps=1
+anneal=0.0
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=8
+split=1
+kernel_size=5
+activation=tanh
+dropout_p=1.0
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+
+[E20]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E20
+model_name=base_noKura_conv
+img_side = 36
+time_steps=1
+record_steps=1
+anneal=0.0
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=64
+split=1
+kernel_size=5
+activation=tanh
+dropout_p=1.0
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+
+[E21]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E21
+model_name=base_noKura_conv
+img_side = 36
+time_steps=1
+record_steps=1
+anneal=0.0
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=8
+split=1
+kernel_size=5
+activation=tanh
+dropout_p=.5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+
+[E22]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E22
+model_name=base_noKura_conv
+img_side = 36
+time_steps=1
+record_steps=1
+anneal=0.0
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=64
+split=1
+kernel_size=5
+activation=tanh
+dropout_p=.5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+
+[E23]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E23
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=1
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=8
+split=4
+kernel_size=5
+activation=tanh
+dropout_p=1.0
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+
+[E24]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E24
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=1
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=64
+split=4
+kernel_size=5
+activation=tanh
+dropout_p=1.0
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+
+[E25]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E25
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=1
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=8
+split=4
+kernel_size=5
+activation=tanh
+dropout_p=.5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+
+[E26]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E26
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=1
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=64
+split=4
+kernel_size=5
+activation=tanh
+dropout_p=.5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+
+[E27]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E27
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=15
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=8
+split=4
+kernel_size=5
+activation=tanh
+dropout_p=1.0
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+
+[E28]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E28
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=15
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=64
+split=4
+kernel_size=5
+activation=tanh
+dropout_p=1.0
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+
+[E29]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E29
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=15
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=8
+split=4
+kernel_size=5
+activation=tanh
+dropout_p=.5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+
+[E30]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E30
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=15
+anneal=0.0
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=64
+split=4
+kernel_size=5
+activation=tanh
+dropout_p=.5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
