--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -2,6 +2,7 @@
 data_name=composite_textures_small
 exp_name=2_digit_mnist
 device=cuda
+pretrained=False
 interactive=False
 model=base_conv
 segments=3
@@ -29,7 +30,7 @@ phase_initialization=fixed
 walk_step=.1
 intrinsic_frequencies=zero
 learning_rate=1e-4
-transform=linear
+transform=exp
 sparsity_weight=.0001
 time_weight=0
 classify=False
@@ -1074,7 +1075,7 @@ verbosity=1
 [E30]
 data_name=New_Multi_MNIST/class_grouping/overlap_0.25
 segments=3
-exp_name=E30
+exp_name=E30debug
 model_name=base_conv
 img_side = 36
 time_steps=15
