--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -47,9 +47,9 @@ num_global_control=0
 num_cn=8
 sw=True
 p_rewire=0.1
-batch_size=32
+batch_size=18
 train_epochs=150
-show_every=100
+show_every=300
 update_rate=1
 rf_type=arange
 depth=3
@@ -73,9 +73,51 @@ graph_stats=False
 eval_interval=10
 pretrained=False
 entropy_reg=True
-entropy_lambda=1e-5
+entropy_lambda=2e-5
 coherence_order=True
-read_out_type='linear'
+read_out_type=complex
+
+[Segmentation_pretrain]
+data_name=polyominoes_small/8/2/free/small
+exp_name=SR_polyominoes
+device=cuda
+interactive=True
+model=base_conv
+segments=3
+img_side=40
+num_global_control=0
+num_cn=8
+sw=True
+p_rewire=0
+batch_size=40
+train_epochs=250
+show_every=200
+update_rate=1
+rf_type=arange
+depth=3
+start_filts=64
+split=16
+out_channels=64
+kernel_size=3,3
+time_steps=20
+record_step=5
+anneal=0
+phase_initialization=fixed
+walk_step=.01
+intrinsic_frequencies=zero
+learning_rate=1e-4
+transform=exp
+sparsity_weight=0
+time_weight=2
+task='segmentation'
+recurrent_classifier=False
+graph_stats=False
+eval_interval=5
+pretrained=False
+entropy_reg=True
+entropy_lambda=0
+coherence_order=False
+read_out_type='2'
 
 
 [Multi_MNIST36]
