New clustering, more experiments

--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 data_name=composite_textures_small
-exp_name=2_digit_mnist
+exp_name=kura_texture
 device=cuda
 pretrained=False
 interactive=False
@@ -33,11 +33,16 @@ learning_rate=1e-4
 transform=exp
 sparsity_weight=.0001
 time_weight=0
+clustering_algorithm=ms
 classify=False
 recurrent_classifier=False
 graph_stats=False
 verbosity=1
 eval_interval=10
+
+[Multi_MNIST36]
+exp_name = trial
+one_image = True
 
 [Classify_MNIST]
 record_step=8
@@ -771,7 +776,7 @@ time_weight=2
 [E19]
 data_name=New_Multi_MNIST/class_grouping/overlap_0.25
 segments=3
-exp_name=E19
+exp_name=E19a
 model_name=base_noKura_conv
 img_side = 36
 time_steps=1
@@ -798,7 +803,7 @@ verbosity=1
 [E20]
 data_name=New_Multi_MNIST/class_grouping/overlap_0.25
 segments=3
-exp_name=E20
+exp_name=E20a
 model_name=base_noKura_conv
 img_side = 36
 time_steps=1
@@ -825,7 +830,7 @@ verbosity=1
 [E21]
 data_name=New_Multi_MNIST/class_grouping/overlap_0.25
 segments=3
-exp_name=E21
+exp_name=E21a
 model_name=base_noKura_conv
 img_side = 36
 time_steps=1
@@ -852,7 +857,7 @@ verbosity=1
 [E22]
 data_name=New_Multi_MNIST/class_grouping/overlap_0.25
 segments=3
-exp_name=E22
+exp_name=E22a
 model_name=base_noKura_conv
 img_side = 36
 time_steps=1
@@ -1075,12 +1080,124 @@ verbosity=1
 [E30]
 data_name=New_Multi_MNIST/class_grouping/overlap_0.25
 segments=3
-exp_name=E30debug
+exp_name=E30
 model_name=base_conv
 img_side = 36
 time_steps=15
 record_steps=15
-anneal=0.0
+anneal=0.2
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=64
+split=4
+kernel_size=5
+activation=tanh
+dropout_p=.5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+
+[E31]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E31
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=15
+anneal=0.4
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=64
+split=4
+kernel_size=5
+activation=tanh
+dropout_p=.5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+
+[E32]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E32
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=15
+anneal=0.6
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=64
+split=4
+kernel_size=5
+activation=tanh
+dropout_p=.5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+
+[E33]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E33
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=15
+anneal=0.8
+update_rate=18
+sparsity_weight=0.0001
+intrinsic_frequencies=zero
+sw=False
+p_rewire=0
+num_cn=24
+num_global_control=0
+depth=3
+start_filts=64
+split=4
+kernel_size=5
+activation=tanh
+dropout_p=.5
+learning_rate=1e-4
+eval_interval=10
+train_epochs=1000
+time_weight=0
+verbosity=1
+
+[E34]
+data_name=New_Multi_MNIST/class_grouping/overlap_0.25
+segments=3
+exp_name=E34
+model_name=base_conv
+img_side = 36
+time_steps=15
+record_steps=15
+anneal=1.0
 update_rate=18
 sparsity_weight=0.0001
 intrinsic_frequencies=zero
