--- a/supervised/kuramoto/experiments.cfg
+++ b/supervised/kuramoto/experiments.cfg
@@ -1,18 +1,19 @@
 [DEFAULT]
 data_name=1000-types-mnist/multi-mnist10-0.1-sd0.8
-exp_name=2_digit_mnist
+exp_name=2_digit_mnist_ODE_debug3
 device=cuda
 interactive=False
-model=Unet
+model=ODE_conv
 segments=3
 img_side=36
-num_global_control=4
+num_global_control=0
 num_cn=8
 sw=False
 p_rewire=0
-batch_size=64
+batch_size=10
+eval_interval=20
 train_epochs=200
-show_every=100
+show_every=300
 update_rate=10
 rf_type=arange
 depth=3
@@ -20,8 +21,8 @@ start_filts=64
 split=16
 out_channels=64
 kernel_size=3,3
-time_steps=15
-record_step=1
+time_steps=1
+record_step=5
 anneal=0.2
 phase_initialization=fixed
 walk_step=.1
@@ -33,6 +34,7 @@ time_weight=2
 classify=False
 recurrent_classifier=False
 graph_stats=False
+ode_train=True
 
 [Multi_MNIST36]
 exp_name = trial
